@@ -1690,6 +1690,14 @@ Ddd*comboBoxArrow.width:   12
 
 
 !-----------------------------------------------------------------------------
+! Spin Boxes
+!-----------------------------------------------------------------------------
+
+! Have somewhat lighter spin box arrows
+Ddd*spinBoxArrow.width:   10
+
+
+!-----------------------------------------------------------------------------
 ! Titles
 !-----------------------------------------------------------------------------
 
